# docs/swagger.yaml
@@ -70,6 +70,13 @@ definitions:
       vehicleType:
         type: string
     type: object
+  dto.TokenDto:
+    properties:
+      accessToken:
+        type: string
+      refreshToken:
+        type: string
+    type: object
   dto.UserDto:
     properties:
       birthDate:
@@ -145,6 +152,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/dto.TokenDto'
       summary: User login
       tags:
       - auth
@@ -163,6 +172,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/dto.TokenDto'
       summary: Refresh Access Token
       tags:
       - auth
